--- a/LicGen/src/styles.css
+++ b/LicGen/src/styles.css
@@ -1,59 +1,3 @@
-/* body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  max-width: 800px;
-  margin: 50px auto;
-  padding: 20px;
-  background: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
-  text-align: center;
-}
-
-h1 {
-  color: #333;
-  margin-bottom: 20px;
-}
-
-input {
-  width: 80%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-bottom: 20px;
-  font-size: 16px;
-}
-
-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-button:hover {
-  background-color: #45a049;
-}
-
-.generated-key {
-  margin-top: 20px;
-  padding: 15px;
-  background-color: #e7f7e7;
-  border: 1px solid #4caf50;
-  border-radius: 4px;
-  color: #4caf50;
-  font-size: 18px;
-  font-weight: bold;
-} */
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f9;
@@ -72,6 +16,17 @@ body {
   text-align: center;
   line-height: 1.6;
 }
+
+.logo-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.logo {
+  width: 150px; /* Adjust the width */
+  height: auto;
+}
+
 
 h1 {
   color: #222;
@@ -149,6 +104,7 @@ form div {
   margin-bottom: 20px;
   text-align: left;
 }
+
 
 @media (max-width: 600px) {
   .container {
