--- a/SmartLic/index.css
+++ b/SmartLic/index.css
@@ -156,6 +156,30 @@ img {
     }
 }
 
+/* Spinner style */
+   .spinner {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #4BAD4E;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    display: none; /* Initially hidden */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+#loading-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
+
 /* Media Queries for Larger Screens */
 
 /* For tablets (min-width: 768px) */
