--- a/I3Hub/styles.css
+++ b/I3Hub/styles.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     color: white;
-    background-color: #1eb580;
+    background-color: #1a2b4c;
     background-size: cover;
     transition: background-color 0.5s ease-in-out;
 }
